# rsdb-utils

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
rsdb_utils/: __init__.py  utils.py
tests/: list_of_enums_from_json_schema.csv  rsdb_test_dataset.csv  rsdb_test_dataset.parquet  rsdb_test_dataset_with_errors.csv  rsdb_test_dataset_with_errors_checked.csv  tests.py
